<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutTitle"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutVersion"
        android:textSize="18sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/aboutTitle"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_epfl"
        android:id="@+id/epflLogo"
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/aboutDescription"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/epfl_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutDescription"
        android:text="@string/description"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/aboutDevelopers"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutGoal"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/aboutVersion"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutDevelopers"
        android:layout_marginTop="37dp"
        android:textAlignment="center"
        android:layout_below="@+id/aboutGoal"
        android:layout_centerHorizontal="true" />

</RelativeLayout>