<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.activity.MainActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/app_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomingMessage"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/welcoming_message"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/welcomingMessage"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcomingDescription" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/dino_welcome"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="200dp"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dino_logo"/>

    <TextView
        android:id="@+id/networkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_connected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/main_email"
        android:hint="@string/email_ask"
        android:textAlignment="center"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/networkStatus"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/main_email"
        android:layout_alignEnd="@+id/main_email"
        android:id="@+id/main_password"
        android:hint="@string/password_ask"
        android:textAlignment="center"
        android:nextFocusDown="@+id/connectionButton"
        android:background="@android:drawable/editbox_background" />

    <Button
        android:text="@string/password_forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@null"
        android:textColor="@color/button_color_resetpassword"
        android:id="@+id/forgotPasswordButton"
        android:textSize="14sp"
        android:textStyle="normal|italic"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/main_password"
        android:layout_centerHorizontal="true" />
    <Button
        android:text="@string/connection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:id="@+id/connectionButton"
        android:background="@android:drawable/editbox_background"
        android:textSize="24sp"
        android:textColor="@color/button_color_login"
        android:textAllCaps="false"
        android:textStyle="normal|bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/main_password" />

    <Button
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:id="@+id/registerButton"
        android:background="@android:drawable/editbox_background"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:textColor="@color/button_color_signup"
        android:onClick="sendMessageForReg"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/main_password" />

</RelativeLayout>