<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.epfl.sweng.tutosaurus.activity.ResetPasswordActivity"
    tools:showIn="@layout/activity_reset_password">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/dino_welcome"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="200dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/welcome_message_description"/>

    <TextView
        android:text="@string/app_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/password_reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/resetPasswordView" />

    <TextView
        android:text="@string/request_email_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPasswordView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/passwordResetInstructionsView"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/resetEmailInput"
        android:hint="@string/email_ask"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/passwordResetInstructionsView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rstPasswordButton"
        android:layout_marginTop="11dp"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/resetEmailInput"
        android:layout_alignParentStart="true"
        android:text="@string/reset_password_btn" />

    <Button
        android:text="@string/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:id="@+id/backButton" />


</RelativeLayout>
