<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.activity.RegisterScreenActivity"
    android:focusableInTouchMode="true">


    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/dino_register"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dino_register"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerGaspar"
        android:hint="@string/gaspar"
        android:textAlignment="center"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/registerGaspar"
        android:layout_alignStart="@+id/registerGaspar" />

    <TextView
        android:text="@string/instructions_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsRegister"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|italic"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/send_info_to_tequila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerLogin"
        android:onClick="register"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
