<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.activity.ChangePasswordActivity">

    <TextView
        android:text="@string/explanations_change_password"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/explanationsText"
        android:textAlignment="center"
        android:textStyle="normal|italic" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:hint="@string/choose_password"
        android:layout_below="@id/explanationsText"
        android:layout_centerHorizontal="true"
        android:id="@+id/chooseNewPass"
        android:background="@android:drawable/editbox_background"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/chooseNewPass"
        android:layout_centerHorizontal="true"
        android:id="@+id/confirmNewPass"
        android:background="@android:drawable/editbox_background"
        android:textAlignment="center" />

    <Button
        android:text="@string/send_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmNewPass"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:id="@+id/changeNewPass"
        android:background="@android:drawable/editbox_background"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:onClick="changePassword" />

</RelativeLayout>
